<resources>
    <string name="app_name">IoT Manager</string>
    <string name="action_settings">Settings</string>
    <string name="default_page_name">Available Devices</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_device">Device</string>
    <string name="skip_initial_config">Skip</string>
    <string name="hello_world">Hello world!</string>
    <string name="configureRouter">Configure</string>
    <string name="title_activity_add_device">AddDevice</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_device">Add</string>
    <string name="rename_device">Rename</string>
    <string name="change_type">Change Type</string>
    <string name="change_network">Change Network</string>
    <string name="access_point">Convert To AP</string>
    <string name="change_room">Change Room</string>
    <string name="extra_info">More Info</string>
    <string name="broadcast_for_device_ips">Broadcast</string>
    <string name="title_activity_device_configuration">DeviceConfiguration</string>
    <string name="title_activity_device_category">DeviceCategory</string>
    <string name="title_activity_initial_device_configuration">InitialDeviceConfiguration</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_temperature_configuration">TemperatureConfiguration</string>
    <string name="title_activity_lighting_configuration">LightingConfiguration</string>
    <string name="all">All</string>
    <string name="title_activity_nearby_devices">NearbyDevices</string>
    <string name="title_activity_camera_configuration">CameraConfiguration</string>
    <string name="title_activity_extra_info">ExtraInfo</string>
    <string name="title_activity_heater_configuration">HeaterConfiguration</string>
    <string name="title_activity_power_settings">PowerSettings</string>
</resources>
