<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iotmanager.GenericConfiguration">
    <item android:id="@+id/renameDevice"
        android:title="@string/rename_device"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/accessPoint"
        android:title="@string/access_point"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/change_type"
        android:title="@string/change_type"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/change_room"
        android:title="@string/change_room"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/change_network"
        android:title="@string/change_network"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
